// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should return correctly with text 1`] = `
"/*test 1
test 2*/"
`;

exports[`should return correctly with text, align 1`] = `
"/*test 1
 *test 2
 */"
`;

exports[`should return correctly with text, align, prefix 1`] = `
"/*~test 1
 *~test 2
 */"
`;

exports[`should return correctly with text, prefix 1`] = `
"/*~test 1
~test 2*/"
`;
